1.新增获取通知接口 2.新增使用道具接口 3.新增背包接口

--- a/NHibernate与MySQL交互/NHibernate与MySQL交互.csproj
+++ b/NHibernate与MySQL交互/NHibernate与MySQL交互.csproj
@@ -57,9 +57,11 @@
   <ItemGroup>
     <Compile Include="Manager\IManager.cs" />
     <Compile Include="Manager\MySqlManager.cs" />
+    <Compile Include="Model\Notice.cs" />
     <Compile Include="Model\UserGame.cs" />
     <Compile Include="Model\Sign.cs" />
     <Compile Include="Model\UserEmail.cs" />
+    <Compile Include="Model\UserNotice.cs" />
     <Compile Include="Model\UserProp.cs" />
     <Compile Include="Model\UserInfo.cs" />
     <Compile Include="Model\User.cs" />
@@ -74,6 +76,12 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Mappings\UserNotice.hbm.xml">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Mappings\Notice.hbm.xml">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <EmbeddedResource Include="Mappings\UserProp.hbm.xml">
       <SubType>Designer</SubType>
     </EmbeddedResource>
