--- a/TLJ_MySqlService/TLJ_MySqlService.csproj
+++ b/TLJ_MySqlService/TLJ_MySqlService.csproj
@@ -71,14 +71,16 @@
     <Compile Include="Handler\Email\OneKeyReadEmailHandler.cs" />
     <Compile Include="Handler\Email\ReadEmailHandler.cs" />
     <Compile Include="Handler\Email\GetEmailHandler.cs" />
+    <Compile Include="Handler\Notice\GetUseNoticeHandler.cs" />
     <Compile Include="Handler\UserInfo\GetUserInfoHandler.cs" />
     <Compile Include="Handler\Sign\SignHandler.cs" />
     <Compile Include="Handler\Sign\GetSignRecordHandler.cs" />
     <Compile Include="Handler\Login\LoginHandler.cs" />
     <Compile Include="Handler\Login\RegisterHandler.cs" />
-    <Compile Include="Handler\UserPropHander\GetUserBagHandler.cs" />
-    <Compile Include="Handler\UserPropHander\UsePropHandler.cs" />
+    <Compile Include="Handler\Prop\GetUserBagHandler.cs" />
+    <Compile Include="Handler\Prop\UsePropHandler.cs" />
     <Compile Include="JsonObject\UserGameJsonObject.cs" />
+    <Compile Include="JsonObject\UserNoticeJsonObj.cs" />
     <Compile Include="JsonObject\UserPropJsonObject.cs" />
     <Compile Include="Model\ReadEmailReq.cs" />
     <Compile Include="Model\Login.cs" />
