--- a/每周一更新签到数据/packages.config
+++ b/每周一更新签到数据/packages.config
@@ -3,4 +3,7 @@
   <package id="Iesi.Collections" version="4.0.0.4000" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
   <package id="NHibernate" version="4.1.1.4000" targetFramework="net461" />
+  <package id="NLog" version="4.4.12" targetFramework="net461" />
+  <package id="NLog.Config" version="4.4.12" targetFramework="net461" />
+  <package id="NLog.Schema" version="4.4.12" targetFramework="net461" />
 </packages>
