--- a/TLJ_MySqlService/TLJ_MySqlService.csproj
+++ b/TLJ_MySqlService/TLJ_MySqlService.csproj
@@ -71,11 +71,14 @@
     <Compile Include="Handler\Email\OneKeyReadEmailHandler.cs" />
     <Compile Include="Handler\Email\ReadEmailHandler.cs" />
     <Compile Include="Handler\Email\GetEmailHandler.cs" />
+    <Compile Include="Handler\Prop\UseLaBaHandler.cs" />
+    <Compile Include="Handler\Ranking\GetRankListHandler.cs" />
     <Compile Include="Handler\Goods\BuyGoodsHandler.cs" />
     <Compile Include="Handler\Goods\GetGoodsHandler.cs" />
     <Compile Include="Handler\Notice\ReadNoticeHandler.cs" />
     <Compile Include="Handler\Notice\GetUseNoticeHandler.cs" />
     <Compile Include="Handler\Task\GetTaskHandler.cs" />
+    <Compile Include="Handler\RealName\RealNameHandler.cs" />
     <Compile Include="Handler\UserInfo\GetOtherUserInfoHandler.cs" />
     <Compile Include="Handler\UserInfo\GetUserInfoHandler.cs" />
     <Compile Include="Handler\Sign\SignHandler.cs" />
@@ -84,15 +87,19 @@
     <Compile Include="Handler\Login\RegisterHandler.cs" />
     <Compile Include="Handler\Prop\GetUserBagHandler.cs" />
     <Compile Include="Handler\Prop\UsePropHandler.cs" />
+    <Compile Include="JsonObject\UserBuffJsonObject.cs" />
     <Compile Include="JsonObject\UserGameJsonObject.cs" />
     <Compile Include="JsonObject\UserNoticeJsonObj.cs" />
     <Compile Include="JsonObject\UserPropJsonObject.cs" />
+    <Compile Include="JsonObject\JinbiRankJsonObject.cs" />
     <Compile Include="JsonObject\UserTaskJsonObject.cs" />
     <Compile Include="Model\BuyGoodReq.cs" />
     <Compile Include="Model\ReadEmailReq.cs" />
     <Compile Include="Model\Login.cs" />
     <Compile Include="Model\DefaultReqData.cs" />
     <Compile Include="Model\ReadNoticeReq.cs" />
+    <Compile Include="Model\RealNameReq.cs" />
+    <Compile Include="Model\UseLaBaReq.cs" />
     <Compile Include="Model\UsePropReq.cs" />
     <Compile Include="Model\UserEmailData.cs" />
     <Compile Include="ProjectInstaller.cs">
@@ -108,6 +115,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\CommonUtil.cs" />
+    <Compile Include="Utils\IDCardValidationUtil.cs" />
     <Compile Include="Utils\LogUtil.cs" />
     <Compile Include="Utils\MyCommon.cs" />
     <Compile Include="Utils\NetConfig.cs" />
