--- a/NHibernate与MySQL交互/NHibernate与MySQL交互.csproj
+++ b/NHibernate与MySQL交互/NHibernate与MySQL交互.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Manager\MySqlManager.cs" />
     <Compile Include="Model\Goods.cs" />
     <Compile Include="Model\Notice.cs" />
+    <Compile Include="Model\PVPGameRoom.cs" />
     <Compile Include="Model\UserRealName.cs" />
     <Compile Include="Model\UserTask.cs" />
     <Compile Include="Model\Task.cs" />
@@ -80,6 +81,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Mappings\PVPGameRoom.hbm.xml">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <EmbeddedResource Include="Mappings\UserRealName.hbm.xml">
       <SubType>Designer</SubType>
     </EmbeddedResource>
