--- a/TLJ_MySqlService/TLJ_MySqlService.csproj
+++ b/TLJ_MySqlService/TLJ_MySqlService.csproj
@@ -71,6 +71,9 @@
     <Compile Include="Handler\Email\OneKeyReadEmailHandler.cs" />
     <Compile Include="Handler\Email\ReadEmailHandler.cs" />
     <Compile Include="Handler\Email\GetEmailHandler.cs" />
+    <Compile Include="Handler\Game\GetPVPGameDataHandler.cs" />
+    <Compile Include="Handler\Phone\CheckSmsHandler.cs" />
+    <Compile Include="Handler\Phone\SendSmsHandler.cs" />
     <Compile Include="Handler\Prop\UseLaBaHandler.cs" />
     <Compile Include="Handler\Ranking\GetRankListHandler.cs" />
     <Compile Include="Handler\Goods\BuyGoodsHandler.cs" />
@@ -99,6 +102,8 @@
     <Compile Include="Model\DefaultReqData.cs" />
     <Compile Include="Model\ReadNoticeReq.cs" />
     <Compile Include="Model\RealNameReq.cs" />
+    <Compile Include="Model\CheckSmsReq.cs" />
+    <Compile Include="Model\SendSmsReq.cs" />
     <Compile Include="Model\UseLaBaReq.cs" />
     <Compile Include="Model\UsePropReq.cs" />
     <Compile Include="Model\UserEmailData.cs" />
@@ -115,6 +120,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\CommonUtil.cs" />
+    <Compile Include="Utils\HttpUtil.cs" />
     <Compile Include="Utils\IDCardValidationUtil.cs" />
     <Compile Include="Utils\LogUtil.cs" />
     <Compile Include="Utils\MyCommon.cs" />
