--- a/TLJ_MySqlService/TLJ_MySqlService.csproj
+++ b/TLJ_MySqlService/TLJ_MySqlService.csproj
@@ -85,6 +85,7 @@
     <Compile Include="Handler\Prop\UseLaBaHandler.cs" />
     <Compile Include="Handler\Prop\ChangeUserWealth.cs" />
     <Compile Include="Handler\Prop\UseHuaFeiHandler.cs" />
+    <Compile Include="Handler\Prop\UseBuffPropHandler.cs" />
     <Compile Include="Handler\Ranking\GetRankHandler.cs" />
     <Compile Include="Handler\Robot\AddRobot.cs" />
     <Compile Include="Handler\Robot\GetRobotHandler.cs" />
@@ -104,7 +105,7 @@
     <Compile Include="Handler\Login\RegisterHandler.cs" />
     <Compile Include="Handler\Prop\GetUserBagHandler.cs" />
     <Compile Include="Handler\Prop\UsePropHandler.cs" />
-    <Compile Include="Handler\Web\GetUserInfoFromWCHandler.cs" />
+    <Compile Include="Handler\Web\GetWXUserInfoHandler.cs" />
     <Compile Include="Model\Request\RecordUserDataReq.cs" />
     <Compile Include="Model\Request\AddEmailReq.cs" />
     <Compile Include="Model\Request\GetAIReq.cs" />
