--- a/NHibernate与MySQL交互/NHibernate与MySQL交互.csproj
+++ b/NHibernate与MySQL交互/NHibernate与MySQL交互.csproj
@@ -57,11 +57,14 @@
   <ItemGroup>
     <Compile Include="Manager\IManager.cs" />
     <Compile Include="Manager\MySqlManager.cs" />
+    <Compile Include="Model\CommonConfig.cs" />
+    <Compile Include="Model\Prop.cs" />
     <Compile Include="Model\Goods.cs" />
     <Compile Include="Model\Notice.cs" />
     <Compile Include="Model\PVPGameRoom.cs" />
     <Compile Include="Model\SignConfig.cs" />
     <Compile Include="Model\UserRealName.cs" />
+    <Compile Include="Model\MyLog.cs" />
     <Compile Include="Model\UserTask.cs" />
     <Compile Include="Model\Task.cs" />
     <Compile Include="Model\UserGame.cs" />
@@ -82,6 +85,15 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Mappings\CommonConfig.hbm.xml">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Mappings\Prop.hbm.xml">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Mappings\MyLog.hbm.xml">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <EmbeddedResource Include="Mappings\SignConfig.hbm.xml">
       <SubType>Designer</SubType>
     </EmbeddedResource>
