--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -71,6 +71,7 @@
     <Compile Include="Object\EntityFatory.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Util\HttpUtil.cs" />
     <Compile Include="Util\OneThreadSynchronizationContext.cs" />
     <Compile Include="Util\RandomName.cs" />
     <Compile Include="Util\RSAHelper.cs" />
