--- a/NHibernate与MySQL交互/NHibernate与MySQL交互.csproj
+++ b/NHibernate与MySQL交互/NHibernate与MySQL交互.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Manager\IManager.cs" />
     <Compile Include="Manager\MySqlManager.cs" />
     <Compile Include="Model\CommonConfig.cs" />
+    <Compile Include="Model\Log_bind_oldplayer.cs" />
     <Compile Include="Model\Log_Change_Wealth.cs" />
     <Compile Include="Model\Log_Game.cs" />
     <Compile Include="Model\Log_Online_Player.cs" />
@@ -93,6 +94,9 @@
     <Compile Include="Utils\VipUtil.cs" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Mappings\Log_bind_oldplayer.hbm.xml">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <EmbeddedResource Include="Mappings\Log_Game.hbm.xml">
       <SubType>Designer</SubType>
     </EmbeddedResource>
