1.更新绑定老游戏接口

--- a/Nhibernate与老手游SqlServer交互/Nhibernate与老手游SqlServer交互.csproj
+++ b/Nhibernate与老手游SqlServer交互/Nhibernate与老手游SqlServer交互.csproj
@@ -51,7 +51,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Model\UserSource.cs" />
-    <Compile Include="NHibernaMsServerteHelper.cs" />
+    <Compile Include="NHiMsServerteHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
