--- a/NHibernate与MySQL交互/NHibernate与MySQL交互.csproj
+++ b/NHibernate与MySQL交互/NHibernate与MySQL交互.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Model\Statistics.cs" />
     <Compile Include="Model\UserRealName.cs" />
     <Compile Include="Model\MyLog.cs" />
+    <Compile Include="Model\UserExchange.cs" />
     <Compile Include="Model\UserRecharge.cs" />
     <Compile Include="Model\UserMonthSign.cs" />
     <Compile Include="Model\UserExtend.cs" />
@@ -96,6 +97,9 @@
     <Compile Include="Utils\VipUtil.cs" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Mappings\UserExchange.hbm.xml">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <EmbeddedResource Include="Mappings\UserExtend.hbm.xml">
       <SubType>Designer</SubType>
     </EmbeddedResource>
