--- a/Nhibernate与老手游SqlServer交互/Nhibernate与老手游SqlServer交互.csproj
+++ b/Nhibernate与老手游SqlServer交互/Nhibernate与老手游SqlServer交互.csproj
@@ -50,6 +50,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Model\UserBindPhone.cs" />
     <Compile Include="Model\UserSource.cs" />
     <Compile Include="NHiMsServerteHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -62,6 +63,9 @@
       <SubType>Designer</SubType>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <EmbeddedResource Include="Mapping\UserBindPhone.hbm.xml">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <EmbeddedResource Include="Mapping\UserSource.hbm.xml">
       <SubType>Designer</SubType>
     </EmbeddedResource>
