1.服务器更新

--- a/NHibernate与MySQL交互/NHibernate与MySQL交互.csproj
+++ b/NHibernate与MySQL交互/NHibernate与MySQL交互.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Model\Statistics.cs" />
     <Compile Include="Model\JDCard.cs" />
     <Compile Include="Model\UserPhoneExchange.cs" />
+    <Compile Include="Model\UserActivity51.cs" />
     <Compile Include="Model\UserRealName.cs" />
     <Compile Include="Model\MyLog.cs" />
     <Compile Include="Model\UserExchange.cs" />
@@ -199,6 +200,9 @@
       <SubType>Designer</SubType>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <EmbeddedResource Include="Mappings\UserActivity51.hbm.xml">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <EmbeddedResource Include="Mappings\Log_Login_old.hbm.xml">
       <SubType>Designer</SubType>
     </EmbeddedResource>
